Edit the language in Github

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-# Force GitHub to recognize .java files as Java
-*.java linguist-language=Java
+# Force GitHub to recognize .class files as Java
+*.class linguist-language=Java
 
 # Ignore all files in the 'node_modules' directory (or other non-Java files)
 node_modules/* linguist-vendored
